<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/kuusha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/kuussha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/geisha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/geisha"
            app:layout_constraintStart_toEndOf="@+id/kuussha" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/jissya" android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/jissha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/jissya"
            app:layout_constraintStart_toEndOf="@+id/geisha"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/shiharai_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/shiharai"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/kuussha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/warimashi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/warimashi"
            app:layout_constraintStart_toEndOf="@+id/shiharai" android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/geisha"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.293" app:layout_constraintVertical_bias="0.531"/>

</android.support.constraint.ConstraintLayout>